# music-utilities

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  deploy  infoParser.py  musicfunctions.sh  quickInfo.pl  quickInfo.py  setflactags.pl  setflactags.py  syncoggs  syncoggs.py  tracknames.py
Tests/: run-tests  tracknames.test.sh
oldFiles/: batchMusic.pl  musicfunctions.sh  tracknames.pl
package/arch/: PKGBUILD
package/debian/: README  README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  music-utilities.cron.d.ex  music-utilities.default.ex  music-utilities.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
scripts/: cddb_fetch.pl  importcd  listflactags  refreshflactags  setflactags.py  setoggtags.py  stripflactags  syncoggs  tracknames.py
tests/: tracknames.test.sh
