#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Music-Utilities], [1.1], [george@thebuds.net])

# Checks for programs.
AC_PROG_AWK
AC_PROG_INSTALL
AC_PATH_PROGS([RSYNC], [rsync scp])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
