#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Music-Utilities], [1.2], [george@thebuds.net])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_AWK
AC_PROG_INSTALL
AC_PATH_PROGS([RSYNC], [rsync scp])
AC_PATH_PROGS([MD5_PROGRAM], [md5sum])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
